# hc-FSM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_and_test.yaml  build_clang++.yaml  build_g++.yaml  build_msvc.yaml  build_test_on_pull_request_before_merge.yaml  create_single-header.yaml  main_merge_request_tests.yaml  run_test_on_merge_to_main.yaml  test_on_merge_main_multiple_platforms.yaml
examples/: CMakeLists.txt
examples/CMake_Integration/: CMakeLists.txt  build_run.sh  main.cpp
examples/Guard_example/: main.cpp
examples/Hostile_NPC/: events.h  main.cpp  states.h  transitions_action.h
examples/Simple_example/: main.cpp
include/: Event.h  State.h  StateMachine.h  Transition.h  TransitionsTable.h  finite-state-machine.h  fsm-traits.h  handle-event-result.h  state.h  transition-guard.h  transition.h  transition_action.h  transitions-table.h
include/hcFSM/: finite-state-machine-fwd.h  fsm-traits.h  hcFSM.h
include/hcFSM/detail/: finite-state-machine-fwd.h  finite-state-machine.h  fsm-traits.h  handle-event-result.h  state-machine-fwd.h  state-machine.h  state.h  transition-action.h  transition-guard.h  transition.h  transitions-table.h
single_header/: hcFSM.h  single_header.h
single_header/packager/: main.py  packager.py
src/: main.cpp
test/: state_tests.cpp  transition_tests.cpp
tests/: CMakeLists.txt  automatic_transition_tests.cpp  handle_event_result_tests.cpp  hierarchical_state_machine_tests.cpp  initial_states_ctor_dtor_tests.cpp  onEntry_onExit_actions_tests.cpp  simple_transition_tests.cpp  state_machine_tests.cpp  state_machine_traits_tests.cpp  state_tests.cpp  state_traits_tests.cpp  transition_action_tests.cpp  transition_guard_tests.cpp  transition_struct_tests.cpp  transition_table_tests.cpp  transition_tests.cpp  transition_trait_tests.cpp  transition_traits_tests.cpp
tests/integration_tests/: guard_action_tests.cpp  inner_sm_transition_tests.cpp  onEntry_onExit_actions_tests.cpp  simple_transition_tests.cpp  transition_action_tests.cpp
